--- a/pom.xml
+++ b/pom.xml
@@ -173,14 +173,20 @@
 <!--        <dependency>-->
 <!--            &lt;!&ndash; Required if using Java 11+ as no longer bundled in the core libraries &ndash;&gt;-->
 <!--            <groupId>javax.annotation</groupId>-->
-<!--            <artifactId>javax.annotation-api</artifactId>-->
-<!--            <version>1.3.2</version>-->
-<!--        </dependency>-->
+        <!--            <artifactId>javax.annotation-api</artifactId>-->
+        <!--            <version>1.3.2</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.wire</groupId>
+            <artifactId>wire-runtime</artifactId>
+            <version>4.0.0-alpha.7</version>
         </dependency>
 
     </dependencies>
