--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -88,6 +88,7 @@ jobs:
           current-version: ${{ env.RELEASE_VERSION }}
           version-fragment: 'bug'
 
+      # Note: I know this is a semi maven anti-pattern, SNAPSHOT versions normally precede release versions.
       - name: Add SNAPSHOT to new version
         run: mvn versions:set -DnewVersion=${{ env.RELEASE_VERSION }}-SNAPSHOT
 
@@ -102,19 +103,28 @@ jobs:
           branch: pub # todo make main
 
       # ref: https://github.com/actions/create-release
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      #      - name: Create Release
+      #        id: create_release
+      #        uses: actions/create-release@v1
+      #        env:
+      #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      #        with:
+      #          tag_name: ${{ env.RELEASE_VERSION }}
+      #          release_name: ${{ env.RELEASE_VERSION }}
+      #          body: ${{ env.TAG_MESSAGE }}
+      #          # body: |
+      #          #   Changes in this Release
+      #          #   - First Change
+      #          #   - Second Change
+      #          draft: false
+      #          prerelease: false
+      #          commitish: pub # todo make main
+
+      # ref: https://github.com/marketplace/actions/upload-files-to-a-github-release
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
         with:
-          tag_name: ${{ env.RELEASE_VERSION }}
-          release_name: ${{ env.RELEASE_VERSION }}
-          body: ${{ env.TAG_MESSAGE }}
-          # body: |
-          #   Changes in this Release
-          #   - First Change
-          #   - Second Change
-          draft: false
-          prerelease: false
-          commitish: pub # todo make main
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: target/types-java${{ env.RELEASE_VERSION }}-javadoc.jar
+          asset_name: ${{ matrix.asset_name }}
+          tag: ${{ github.ref }}
