[POM] removing deploy steps from pom for the ci job to try handling them.

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -99,7 +99,7 @@ jobs:
           author_email: liam@unum.id
           message: '[Release ${{ env.RELEASE_VERSION }}] ${{ env.TAG_MESSAGE }}'
           add: '["pom.xml"]'
-          branch: mvnPub # todo main
+          branch: mvnPubCi # todo main
 
       # ref: https://github.com/actions/create-release
       - name: Create Release
@@ -117,7 +117,7 @@ jobs:
           #   - Second Change
           draft: false
           prerelease: false
-          commitish: mvnPub # todo main
+          commitish: mvnPubCi # todo main
 
 #      # ref: https://github.com/marketplace/actions/upload-files-to-a-github-release
 #      - name: Upload binaries to release
