--- a/pom.xml
+++ b/pom.xml
@@ -57,16 +57,16 @@
     <!--        <downloadUrl>http://mojo.codehaus.org/</downloadUrl>-->
     <!--        <status>deployed</status>-->
     <!--    </distributionManagement>-->
-    <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>ossrh</id>
-            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </distributionManagement>
+    <!--    <distributionManagement>-->
+    <!--        <snapshotRepository>-->
+    <!--            <id>ossrh</id>-->
+    <!--            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>-->
+    <!--        </snapshotRepository>-->
+    <!--        <repository>-->
+    <!--            <id>ossrh</id>-->
+    <!--            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>-->
+    <!--        </repository>-->
+    <!--    </distributionManagement>-->
 
     <!--    ref: https://docs.github.com/en/packages/working-with-a-github-packages-registry/working-with-the-apache-maven-registry#publishing-a-package-->
     <!--    <distributionManagement>-->
@@ -260,24 +260,24 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-            </plugin>
+            <!--            <plugin>-->
+            <!--                <groupId>org.apache.maven.plugins</groupId>-->
+            <!--                <artifactId>maven-compiler-plugin</artifactId>-->
+            <!--            </plugin>-->
 
-            <!-- ref: https://github.com/square/square-java-sdk/blob/master/pom.xml-->
-            <!-- To release to Maven central -->
-            <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.8</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <serverId>ossrh</serverId>
-                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                </configuration>
-            </plugin>
+            <!--            &lt;!&ndash; ref: https://github.com/square/square-java-sdk/blob/master/pom.xml&ndash;&gt;-->
+            <!--            &lt;!&ndash; To release to Maven central &ndash;&gt;-->
+            <!--            <plugin>-->
+            <!--                <groupId>org.sonatype.plugins</groupId>-->
+            <!--                <artifactId>nexus-staging-maven-plugin</artifactId>-->
+            <!--                <version>1.6.8</version>-->
+            <!--                <extensions>true</extensions>-->
+            <!--                <configuration>-->
+            <!--                    <serverId>ossrh</serverId>-->
+            <!--                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>-->
+            <!--                    <autoReleaseAfterClose>true</autoReleaseAfterClose>-->
+            <!--                </configuration>-->
+            <!--            </plugin>-->
             <!-- To generate javadoc -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -306,30 +306,30 @@
                 </executions>
             </plugin>
 
-            <!-- To sign the artifacts -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-gpg-plugin</artifactId>
-                <version>1.6</version>
-                <executions>
-                    <execution>
-                        <id>sign-artifacts</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>sign</goal>
-                        </goals>
-                        <configuration>
-                            <!--                            &lt;!&ndash; This is necessary for gpg to not try to use the pinentry programs &ndash;&gt;-->
-                            <!--                            <gpgArguments>-->
-                            <!--                                <arg>&#45;&#45;pinentry-mode</arg>-->
-                            <!--                                <arg>loopback</arg>-->
-                            <!--                            </gpgArguments>-->
-                            <keyname>A40CC86120560B5631B693172DE7B3CB0F11DB7F</keyname>
-                            <!--                            <passphraseServerId>${gpg.keyname}</passphraseServerId>-->
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--            &lt;!&ndash; To sign the artifacts &ndash;&gt;-->
+            <!--            <plugin>-->
+            <!--                <groupId>org.apache.maven.plugins</groupId>-->
+            <!--                <artifactId>maven-gpg-plugin</artifactId>-->
+            <!--                <version>1.6</version>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <id>sign-artifacts</id>-->
+            <!--                        <phase>verify</phase>-->
+            <!--                        <goals>-->
+            <!--                            <goal>sign</goal>-->
+            <!--                        </goals>-->
+            <!--                        <configuration>-->
+            <!--                            &lt;!&ndash;                            &lt;!&ndash; This is necessary for gpg to not try to use the pinentry programs &ndash;&gt;&ndash;&gt;-->
+            <!--                            &lt;!&ndash;                            <gpgArguments>&ndash;&gt;-->
+            <!--                            &lt;!&ndash;                                <arg>&#45;&#45;pinentry-mode</arg>&ndash;&gt;-->
+            <!--                            &lt;!&ndash;                                <arg>loopback</arg>&ndash;&gt;-->
+            <!--                            &lt;!&ndash;                            </gpgArguments>&ndash;&gt;-->
+            <!--                            <keyname>A40CC86120560B5631B693172DE7B3CB0F11DB7F</keyname>-->
+            <!--                            &lt;!&ndash;                            <passphraseServerId>${gpg.keyname}</passphraseServerId>&ndash;&gt;-->
+            <!--                        </configuration>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--            </plugin>-->
             <plugin>
                 <groupId>com.github.os72</groupId>
                 <artifactId>protoc-jar-maven-plugin</artifactId>
