--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -34,24 +34,24 @@ jobs:
           echo ${{ env.TAG_VERSION }}
           echo ${{ env.TAG_MESSAGE }}
 
-      - name: setup java
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '16'
-          cache: 'maven'
-
-      - name: Bump POM Version
-        run: mvn versions:set -DnewVersion=${{ env.RELEASE_VERSION }}
-
-      #      - name: Build with Maven
-      #        run: mvn -B package --file pom.xml
-
-      - name: Publish to GitHub Packages Apache Maven
-        #        run: mvn --batch-mode deploy
-        run: mvn deploy
-        env:
-          GITHUB_TOKEN: ${{ github.token }} # GITHUB_TOKEN is the default env for the password
+      #      - name: setup java
+      #        uses: actions/setup-java@v2
+      #        with:
+      #          distribution: 'zulu' # See 'Supported distributions' for available options
+      #          java-version: '16'
+      #          cache: 'maven'
+      #
+      #      - name: Bump POM Version
+      #        run: mvn versions:set -DnewVersion=${{ env.RELEASE_VERSION }}
+      #
+      #      #      - name: Build with Maven
+      #      #        run: mvn -B package --file pom.xml
+      #
+      #      - name: Publish to GitHub Packages Apache Maven
+      #        #        run: mvn --batch-mode deploy
+      #        run: mvn deploy
+      #        env:
+      #          GITHUB_TOKEN: ${{ github.token }} # GITHUB_TOKEN is the default env for the password
 
       - name: Set up Apache Maven Central
         uses: actions/setup-java@v2
