--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,8 @@
         <log4j.version>2.14.0</log4j.version>
         <org.hyperledger.fabric.sdktest.ITSuite>IntegrationSuite.java</org.hyperledger.fabric.sdktest.ITSuite>
         <gpg.executable>gpg2</gpg.executable>
-        <maven.compiler.source>15</maven.compiler.source>
-        <maven.compiler.target>15</maven.compiler.target>
+        <!--        <maven.compiler.source>15</maven.compiler.source>-->
+        <!--        <maven.compiler.target>15</maven.compiler.target>-->
     </properties>
 
     <!--    <distributionManagement>-->
